blog page, carousel, tickets
returned blog page to normal, but added some text to the first one.
deleted the carousel from the about page and made it ready for a group photo.
changed all the wrong linked photos.
changed ticket page ticket cards to have a heart icon.

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
 
   <!-- Carousel and its navigation-->
   <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-    <nav class="navbar" id="transNavbar">
+    <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
       <div class="container-fluid">
         <div class="justify-content-start">
           <button class="icon-style icon-white">
@@ -134,126 +134,132 @@
         </div>
       </div>
     </nav>
+  <!--end of navigations-->
 
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/blog-page-images/theater_play_actress.jpg" class="d-block w-100" alt="play photo">
-      </div>
-    </div>
-  </div>
-<!--end of navigations-->
+  <!--main for your content and text starts here-->
 
-<!--main for your content and text starts here-->
-	
   <main>
-	  
-    <!--container for about-->
-	  
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h3 class="outfit-semibold">Must-See LGBTQ+ Shows Right Now</h3>
-          <p>A roundup of the latest and best gay-themed productions.</p>
+      <div class="row align-items-center">
+        <div class="col-8">
+          <a href="blog.html" class="no-link-style"><h2>blog</h2></a>
+        </div>
+        <div class="col-4 text-end">
+          <a href="blog.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">filter</a>
         </div>
       </div>
-		
-		<!-- Empty row -->
-		
-		<div class="row">
-        <div class="col">
-            <br> <!-- Adds space -->
-        </div>
-    	</div>
-		
-		<div class="row">
-			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h1>
-				<p class= "date">29.04.2025</p>
-			</div>
-			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h1>
-				<p class= "date">23.04.2025</p>
-			</div>
-			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog-page-images/theater_indoor.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">The Smartest Ways to Score Theater Tickets</h1>
-				<p class= "date">14.04.2025</p>
-			</div>
-	
-			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/blog-page-images/costume_group.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle" >From the Fringe to Broadway: How LGBTQ+ Stories Shape the Stage</h1>
-				<p class= "date">02.04.2025</p>
-			</div>
-			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog-page-images/dark_theater.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Breaking Barriers: LGBTQ+ Playwrights Changing the Theater Scene</h1>
-				<p class= "date">25.03.2025</p>
-			</div>
-			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog-page-images/rainbow_flag.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">The Evolution of LGBTQ+ Representation in Theater</h1>
-				<p class= "date">13.03.2025</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col text-center">
-			 <button type="submit" class="btn btn-light w-20">Load More</button>
-			</div>
-		</div>
     </div>
-	  
+    <br>
+    <!--container for about-->
+
+    <div class="container">
+
+
+      <!-- Empty row -->
+
+      <div class="row">
+        <div class="col-12 col-xl-8" style="padding-bottom: 7px;">
+          <img src="images/blog-page-images/theater_play_actress.jpg" class="img-fluid" alt="template">
+        </div>
+        <div class="col-12 col-xl-4">
+          <h4 class="outfit-semibold">Must-See LGBTQ+ Shows Right Now</h4>
+          <p class="outfit-medium">A roundup of the latest and best gay-themed productions.</p>
+          <p>From groundbreaking dramas to heartwarming comedies, these standout LGBTQ+ productions are redefining queer storytelling on stage and screen. <a href="#" class="no-link-style icon-style">more...</a></p>
+          <p class="date">02.05.2025</p>
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h1>
+          <p class="date">29.04.2025</p>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h1>
+          <p class="date">23.04.2025</p>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/theater_indoor.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">The Smartest Ways to Score Theater Tickets</h1>
+          <p class="date">14.04.2025</p>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/costume_group.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">From the Fringe to Broadway: How LGBTQ+ Stories Shape the Stage</h1>
+          <p class="date">02.04.2025</p>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/dark_theater.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">Breaking Barriers: LGBTQ+ Playwrights Changing the Theater Scene</h1>
+          <p class="date">25.03.2025</p>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <img src="images/blog-page-images/rainbow_flag.jpg" class="img-fluid" alt="template">
+          <h1 class="blogtitle">The Evolution of LGBTQ+ Representation in Theater</h1>
+          <p class="date">13.03.2025</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <button type="submit" class="btn btn-light w-20">Load More</button>
+        </div>
+      </div>
+    </div>
+
     <!--end container for about-->
-	  
+
   </main>
-	
+
   <!--main for your content stops here-->
 
-   <!--footer navigation starts here-->
-   <footer class="bg-blue text-white py-4">
+  <!--footer navigation starts here-->
+  <footer class="bg-blue text-white py-4">
     <div class="container">
-        <div class="row">
-            <!-- Brand Logo & Name -->
-            <div class="col-md-4 text-center text-md-start">
-                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
-                <h5 class="mt-2">outncenter</h5>
-            </div>
-
-            <!-- Contact Information -->
-            <div class="col-md-4 text-center footer2">
-                <h5>Contact</h5>
-                <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
-                <p>Phone: +31 6 20 87 45 1</p>
-                <p>Address: 12 Grote Markt, Breda</p>
-            </div>
-
-            <!-- Explore (Navigation Links) -->
-            <div class="col-md-4 text-center text-md-end">
-                <h5>Explore</h5>
-                <ul class="list-unstyled footer2">
-                    <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
-                    <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
-                    <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
-                    <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
-					<li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <!-- Brand Logo & Name -->
+        <div class="col-md-4 text-center text-md-start">
+          <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+          <h5 class="mt-2">outncenter</h5>
         </div>
-		<div class="text-center mt-3">
-            <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
-                <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
-            </a>
-            <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
-                <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
-            </a>
+
+        <!-- Contact Information -->
+        <div class="col-md-4 text-center footer2">
+          <h5>Contact</h5>
+          <p><a href="mailto:outncenter@gmail.com"
+              style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
+          <p>Phone: +31 6 20 87 45 1</p>
+          <p>Address: 12 Grote Markt, Breda</p>
         </div>
-        <hr class="my-3 border-light">
-        <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
+
+        <!-- Explore (Navigation Links) -->
+        <div class="col-md-4 text-center text-md-end">
+          <h5>Explore</h5>
+          <ul class="list-unstyled footer2">
+            <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
+            <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
+            <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
+            <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
+            <li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="text-center mt-3">
+        <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
+          <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
+        </a>
+        <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
+          <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+        </a>
+      </div>
+      <hr class="my-3 border-light">
+      <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
     </div>
-	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-</footer>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+  </footer>
   <!--footer ends here-->
 
   <!--your script starts here-->
