--- a/about.html
+++ b/about.html
@@ -135,22 +135,9 @@
       </div>
     </nav>
 
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2">
-      </button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
-      </div>
-      <div class="carousel-item">
-        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
+        <img src="images/blog-page-images/theater_play_actress.jpg" class="d-block w-100" alt="teamphoto">
       </div>
     </div>
   </div>
