--- a/favourites.html
+++ b/favourites.html
@@ -150,7 +150,7 @@
         <!-- Card 1 -->
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="./images/theatre_shows/theatre-show-eclipse-hearts.png" class="card-img-top" alt="eclipse-hearts-photo">
+            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
                 <h4 class="card-title">Eclipse Hearts</h4>
