--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
+        <img src="images/theatre-shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
+        <img src="images/theatre-shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
       </div>
       <div class="carousel-item">
-        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
+        <img src="images/theatre-shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
       </div>
     </div>
   </div>
@@ -170,6 +170,9 @@
       </div>
       <div class="row">
         <div class="col-8">
+          <p>
+            We are a safe, inclusive space to read articles, watch interviews with LGBTQ+ actors and creators, and engage in meaningful discussions about representation, storytelling, and more!
+          </p>
           <p>Whether you are passionate about Queer theatre or simply eager to learn more, 
             our community welcomes everyone who values diversity on stage. <a href="about.html" class="no-link-style icon-style">More...</a></p>
           </p>
@@ -190,12 +193,12 @@
       <br>
       <div class="row">
         <div class="col-12 col-md-6">
-          <img src="images/blog3.jpg" class="img-fluid" alt="template">
+          <img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
           <a href="blog.html" class="no-link-style"><h5 class= "blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h5></a>
          <p class= "date">29.04.2025</p>
        </div>
        <div class="col-12 col-md-6">
-         <img src="images/blog2.jpg" class="img-fluid" alt="template">
+         <img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
          <a href="blog.html" class="no-link-style"><h5 class= "blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h5></a>
          <p class= "date">23.04.2025</p>
        </div>
@@ -219,12 +222,14 @@
         <!-- Card 1 -->
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="./images/theatre_shows/theatre-show-eclipse-hearts.png" class="card-img-top" alt="eclipse-hearts-photo">
+            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
                 <h4 class="card-title">Eclipse Hearts</h4>
                 <p>3 Apr - 3 May 2025</p>
-                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho inspired retelling. </p>
+                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho inspired retelling. 
+                  <a href="tickets.html" class="no-link-style icon-style">More...</a>
+                </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end">
@@ -241,13 +246,16 @@
         <!-- Card 2 -->
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="./images/theatre_shows/theatre-show-romeo-and-romeo.png" class="card-img-top" alt="romeo-and-romeo-photo">
+            <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
                 <h4 class="card-title">Romeo & Romeo</h4>
+                <p>6 May - 6 June 2025</p>
                 <p class="card-text">Two men, bound to duty, 
                   are consumed by a forbidden love that spirals into betrayal, vengeance, 
-                  and a devastating fate neither can escape. The name says it all.</p>
+                  and a devastating fate neither can escape. The name says it all. 
+                  <a href="tickets.html" class="no-link-style icon-style">More...</a>
+                </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end">
@@ -267,11 +275,14 @@
          <!-- Card 3 -->
          <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="./images/theatre_shows/theatre-show-moonlight-call.png" class="card-img-top" alt="moonlight-call-photo">
+            <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="moonlight-call-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
                 <h4 class="card-title">Moonlight Call</h4>
-                <p class="card-text">Three souls share only an ancient unspoken connection, defying a world in a rose tinted view. A fantasy look on the AroAce spectrum.</p>
+                <p>10 June - 10 July 2025</p>
+                <p class="card-text">Three souls share only an ancient unspoken connection, defying a world in a rose tinted view. A fantasy look on the AroAce spectrum.
+                   <a href="tickets.html" class="no-link-style icon-style">More...</a>
+                </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end">
