--- a/tickets.html
+++ b/tickets.html
@@ -76,7 +76,7 @@
 
   <!-- Carousel and its navigation-->
   <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-    <nav class="navbar" id="transNavbar">
+    <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
       <div class="container-fluid">
         <div class="justify-content-start">
           <button class="icon-style icon-white">
@@ -134,64 +134,116 @@
         </div>
       </div>
     </nav>
-
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2">
-      </button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
-      </div>
-      <div class="carousel-item">
-        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
-      </div>
-    </div>
-  </div>
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
   <main>
-    <!--container for about-->
     <div class="container">
-      <div class="card mb-3">
-        <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
-          </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      <div class="row align-items-center">
+        <div class="col-8">
+          <a href="tickets.html" class="no-link-style"><h2>tickets</h2></a>
+        </div>
+        <div class="col-1 text-end">
+          <a href="tickets.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">filter</a>
+        </div>
+        <div class="col-3 text-end">
+          <a href="tickets.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">select date</a>
+        </div>
+      </div>
+    </div>
+    <br>
+
+      <!-- Card 1 -->
+       
+      <div class="container">
+        <div class="card mb-3">
+          <div class="row g-0 d-flex">
+            <div class="col-md-4">
+              <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body d-flex flex-column justify-content-between">
+                <div>
+                  <h4 class="card-title">Eclipse Hearts</h4>
+                  <p>3 Apr - 3 May 2025</p>
+                  <p class="card-text">A Sappho
+                    inspired retelling. As her passion for a younger muse intensifies, the line between art and obsession begins to blur. Set in modern times, Eclipse Hearts follows a driven writer whose orderly life unravels in the wake of unreturned love.
+                  </p>
+                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+                <div class="d-flex justify-content-end">
+                  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill"
+                      viewBox="0 0 16 16">
+                      <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                    </svg>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+      <!-- Card 2 -->
+      <div class="container">
+        <div class="card mb-3">
+          <div class="row g-0 d-flex">
+            <div class="col-md-4">
+              <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body d-flex flex-column justify-content-between">
+                <div>
+                  <h4 class="card-title">Eclipse Hearts</h4>
+                  <p>3 Apr - 3 May 2025</p>
+                  <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
+                    inspired retelling.
+                  </p>
+                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+                <div class="d-flex justify-content-end">
+                  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                     <!-- Hollow Heart Icon -->
+                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                     viewBox="0 0 16 16">
+                     <path
+                       d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                   </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     
     <!--more cards here-->
     <div class="container">
       <div class="card mb-3">
         <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
+          <div class="col-md-4">
+            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          <div class="col-md-8">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <div>
+                <h4 class="card-title">Eclipse Hearts</h4>
+                <p>3 Apr - 3 May 2025</p>
+                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
+                  inspired retelling.
+                </p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+              <div class="d-flex justify-content-end">
+                <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                   <!-- Hollow Heart Icon -->
+                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                   viewBox="0 0 16 16">
+                   <path
+                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                 </svg>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -201,16 +253,29 @@
     <div class="container">
       <div class="card mb-3">
         <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
+          <div class="col-md-4">
+            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          <div class="col-md-8">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <div>
+                <h4 class="card-title">Eclipse Hearts</h4>
+                <p>3 Apr - 3 May 2025</p>
+                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
+                  inspired retelling.
+                </p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+              <div class="d-flex justify-content-end">
+                <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                   <!-- Hollow Heart Icon -->
+                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                   viewBox="0 0 16 16">
+                   <path
+                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                 </svg>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -220,59 +285,35 @@
     <div class="container">
       <div class="card mb-3">
         <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
+          <div class="col-md-4">
+            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          <div class="col-md-8">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <div>
+                <h4 class="card-title">Eclipse Hearts</h4>
+                <p>3 Apr - 3 May 2025</p>
+                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
+                  inspired retelling.
+                </p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+              <div class="d-flex justify-content-end">
+                <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                   <!-- Hollow Heart Icon -->
+                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                   viewBox="0 0 16 16">
+                   <path
+                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                 </svg>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="card mb-3">
-        <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
-          </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="card mb-3">
-        <div class="row g-0 d-flex">
-          <!-- Image Column -->
-          <div class="col-4">
-            <img src="./images/theatre_shows/ticket-vertical-eclipse-hearts.png" class="img-fluid rounded-start" alt="eclipse-hearts">
-          </div>
-          <!-- Content Column -->
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <br>
 
     <!--end container for about-->
   </main>
