d-flex to ticket filter and date for phone screen

--- a/tickets.html
+++ b/tickets.html
@@ -144,10 +144,10 @@
           <a href="tickets.html" class="no-link-style"><h2>tickets</h2></a>
         </div>
         <div class="col-1 text-end">
-          <a href="tickets.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">filter</a>
+          <a href="tickets.html" class="btn btn-outline-dark outfit-medium d-flex" style="font-size: 2vw;">filter</a>
         </div>
         <div class="col-3 text-end">
-          <a href="tickets.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">select date</a>
+          <a href="tickets.html" class="btn btn-outline-dark outfit-medium d-felx" style="font-size: 2vw;">select date</a>
         </div>
       </div>
     </div>
