--- a/tickets.html
+++ b/tickets.html
@@ -143,10 +143,10 @@
         <div class="col-8">
           <a href="tickets.html" class="no-link-style"><h2>tickets</h2></a>
         </div>
-        <div class="col-1 text-end">
-          <a href="tickets.html" class="btn btn-outline-dark outfit-medium d-flex" style="font-size: 2vw;">filter</a>
+        <div class="col-2 text-end">
+          <a href="tickets.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">filter</a>
         </div>
-        <div class="col-3 text-end">
+        <div class="col-2 text-end">
           <a href="tickets.html" class="btn btn-outline-dark outfit-medium d-felx" style="font-size: 2vw;">select date</a>
         </div>
       </div>
