google analytics tag

--- a/corporate.html
+++ b/corporate.html
@@ -216,7 +216,7 @@
     <div class="col-12 col-md-6 col-xl-4">
       <h3 class="subheadings-content-part-corporate-page">Values</h3>
       <ul>
-        <li><strong>Authenticity</strong> - We are committed to authenticity, and proudly celebrating Lgbtq+ voices in
+        <li><strong>Authenticity</strong> - We are committed to authenticity, and proudly celebrating LGBTQ+ voices in
           theatre.</li>
         <li> <strong>Learning</strong> - Engaging with our brand means always discovering something new.</li>
         <li><strong>Inclusivity</strong>- We welcome all who support and engage with Lgbtq+ theatre.</li>
@@ -259,7 +259,7 @@
       <p><strong>Problem</strong></p>
       <ul>
         <li>All the information is at different places which makes it very unorganized.</li>
-        <li>There is a lot of misinterpretation in theatre about the Lgbtq+ community.</li>
+        <li>There is a lot of misinterpretation in theatre about the LGBTQ+ community.</li>
         <li>They want to read articles about misrepresentation but it is hard to find reliable sources and to find
           interesting articles.</li>
         <li>They want to easily find out about different queer plays that are playing in their area.</li>
@@ -286,9 +286,9 @@
         <li>Enjoy a mix of performances and are often seeking productions that challenge societal norms</li>
         <li>Favour theatre productions that are progressive and inclusive of diverse identities, experiences and stories
         </li>
-        <li>Follow theatre companies, actors online especially those who champion lgbtq+ narratives and themes</li>
+        <li>Follow theatre companies, actors online especially those who champion LGBTQ+ narratives and themes</li>
         <li>Engage with theatre-related content online</li>
-        <li>They are part of the lgbtq+ community or are allies</li>
+        <li>They are part of the LGBTQ+ community or are allies</li>
       </ul>
       <!--end of customer segments part-->
 
@@ -316,7 +316,7 @@
       <!--start  of unfair advantage part-->
       <p><strong>Unfair Advantage</strong></p>
       <ul>
-        <li>Specialized content towards lgbtq+ theatre lovers</li>
+        <li>Specialized content towards LGBTQ+ theatre lovers</li>
         <li>Accessible and easy booking integration, you can easily book tickets and find new plays and ways to travel
           towards the theater all in one place </li>
         <li>A Seamless Blend of Education and Entertainment </li>
@@ -400,26 +400,26 @@
       </p>
       <p><strong>Theatre</strong> <strong>actors</strong></p>
       <ul>
-        <il>Need better access to auditions, industry connections, and mentors</il>
-        <il>Struggle with financial stability; balance acting with side jobs</il>
-        <il>Desire a supportive community, particularly one that celebrates diversity and inclusivity</il>
-        <il>Want rehearsal spaces that nurture growth, creativity, and failure without judgment</il>
-        <il>Desire more lgbtq+ representation in theatre</il>
-        <il>Need career planning tools and sustainable income strategies.</il>
+        <li>Need better access to auditions, industry connections, and mentors</li>
+        <li>Struggle with financial stability; balance acting with side jobs</li>
+        <li>Desire a supportive community, particularly one that celebrates diversity and inclusivity</li>
+        <li>Want rehearsal spaces that nurture growth, creativity, and failure without judgment</li>
+        <li>Desire more LGBTQ+ representation in theatre</li>
+        <li>Need career planning tools and sustainable income strategies.</li>
       </ul>
       <p> <strong> Theatre</strong> <strong>lovers</strong></p>
       <ul>
-        <il>Struggle to discover shows and are looking for a centralized platform with all the information about shows
-        </il>
-        <il>Prefer musicals, high production value, and immersive storytelling.</il>
-        <il>Have a desire for more inclusive storytelling </il>
-        <il>Are frustrated by superficial themes and stereotypical characters in theatre especially lgbtq+ characters
-        </il>
-        <il>Rely on word-of-mouth, social media, and email marketing for show discovery </il>
-        <il>Enjoy behind-the-scenes content like cast interviews and rehearsals </il>
-        <il>Go to the theatre 2–3 times per year especially when they are traveling </il>
-        <il>Want better ticketing systems</il>
-        <il>Seek a platform that connects them with others who share their passion for inclusive theatre</il>
+        <li>Struggle to discover shows and are looking for a centralized platform with all the information about shows
+        </li>
+        <li>Prefer musicals, high production value, and immersive storytelling.</li>
+        <li>Have a desire for more inclusive storytelling </li>
+        <li>Are frustrated by superficial themes and stereotypical characters in theatre especially LGBTQ+ characters
+        </li>
+        <li>Rely on word-of-mouth, social media, and email marketing for show discovery </li>
+        <li>Enjoy behind-the-scenes content like cast interviews and rehearsals </li>
+        <li>Go to the theatre 2–3 times per year especially when they are traveling </li>
+        <li>Want better ticketing systems</li>
+        <li>Seek a platform that connects them with others who share their passion for inclusive theatre</li>
       </ul>
 
       <p> <strong> I</strong><strong><strong>n</strong> <strong>conclusion</strong>.... </strong></p>
@@ -459,7 +459,7 @@
       <h3 class="subheadings-content-part-corporate-page">Our Brand</h3>
       <p> Out n Center is an inclusive theatre brand that strives for more realistic Lgbtq+ representation in theatre.
       </p>
-      <p>Our platform provides informative articles about Lgbtq+ representation awareness and insightful interviews with
+      <p>Our platform provides informative articles about LGBTQ+ representation awareness and insightful interviews with
         professionals from the industry. Moreover, we provide a ticketing service where visitors can gain information
         about new plays and immediately are directed to theatre pages for tickets.</p>
     </div>
@@ -467,23 +467,23 @@
     <!--start of target audience-->
     <div class="col-12 col-md-6 col-xl-4">
       <h3 class="subheadings-content-part-corporate-page">Target audience</h3>
-      <p> The target audience consists of young to middle-aged adults who are either part of the Lgbtq+ community or
-        allies. They are passionate about theatre and view it as a space for artistic expression, storytelling, and
-        representation. Their interests extend beyond casual theatre-going—they actively engage with theatre culture,
-        both online and in person. They are highly engaged, digitally savvy and eager to support theatre that aligns
-        with their values. They are passionate and seek entertainment and meaningful representation in the arts.</p>
-      <p> <strong> Key Characteristics</strong></p>
-      <ul>
+        <p> The target audience consists of young to middle-aged adults who are either part of the LGBTQ+ community or
+        allies.</p>
+	      <p>They are passionate about theatre and view it as a space for artistic expression, storytelling, and representation.</p>
+	        <p>Their interests extend beyond casual theatre-going, they     actively engage with theatre culture, both online and in person.</p> <p> They are highly engaged, digitally savvy and eager to support theatre that aligns with their values.</p> 
+	      <p>They are passionate and seek entertainment and meaningful representation in the arts.</p>
+     <p> <strong> Key Characteristics</strong></p>
+       <ul>
         <li>20-35 years old </li>
         <li>Primarily based in Europe, with a strong presence in urban areas where theatre culture thrives. </li>
-        <li>Lgbtq+ individuals and allies who support inclusive and diverse narratives in the arts. </li>
+        <li>LGBTQ+ individuals and allies who support inclusive and diverse narratives in the arts. </li>
         <li>Interests and values: Inclusivity, creativity, storytelling, activism, and cultural engagement. They often
-          seek out stories that reflect diverse experiences, particularly those related to the Lgbtq+ community. </li>
+          seek out stories that reflect diverse experiences, particularly those related to the LGBTQ+ community. </li>
         <li>Attend the theatre 2/3 times per year. </li>
         <li>Enjoy a mix of performances and are often seeking productions that challenge societal norms. </li>
         <li>Favour theatre productions that are progressive and inclusive of diverse identities, experiences and
           stories. </li>
-        <li>Follow theatre companies, actors online especially those who champion Lgbtq+ narratives and themes. </li>
+        <li>Follow theatre companies, actors online especially those who champion LGBTQ+ narratives and themes. </li>
         <li>Engage with theatre-related content online. </li>
         <li>Active on platforms like Instagram, TikTok, YouTube. </li>
         <li>Use social media to discover new plays. </li>
@@ -520,23 +520,23 @@
       <h3 class="subheadings-content-part-corporate-page">Marketing campaign</h3>
       <p> <strong> Context</strong> <strong>of</strong> <strong>the</strong> <strong>campaign</strong></p>
       <p><strong>Campaign</strong> <strong>objective</strong></p>
-      <p>This campaign aims to foster a more accepting environment for Lgbtq+ characters in theatre, film, and
+      <p>This campaign aims to foster a more accepting environment for LGBTQ+ characters in theatre, film, and
         television by advocating for authentic representation.</p>
       <p>Misrepresentation, whether through stereotypes, one-dimensional portrayals, or tokenism, does not just fail the
         community, it actively harms it. Our goal is to raise awareness about the impact of problematic representation
-        and encourage creators to craft Lgbtq+ characters that feel real, complex, and human.</p>
+        and encourage creators to craft LGBTQ+ characters that feel real, complex, and human.</p>
       <p> <strong> Key</strong> <strong>Message </strong></p>
       <p> To communicate why authentic representation matters, a series of strong, concise statements will be de
         developing that will highlight both the importance of real representation and the harm of poor representation.
       </p>
       <ul>
-        <li>Lgbtq+ characters deserve depth, not stereotypes. </li>
+        <li>LGBTQ+ characters deserve depth, not stereotypes. </li>
         <li>Sexuality isn’t a personality! </li>
         <li>Representation shapes reality. When we reduce characters, we reduce people. </li>
         <li>Visibility should empower, not diminish. Authenticity matters.</li>
       </ul>
       <p> <strong> Call</strong> <strong>to</strong> <strong>Action</strong></p>
-      <p>The call to action is to redefine Lgbtq+ representation in theatre. Share, discuss, and demand stories that
+      <p>The call to action is to redefine LGBTQ+ representation in theatre. Share, discuss, and demand stories that
         reflect the full depth of human experience, because real representation changes lives. (might need to be
         adjusted)</p>
     </div>
