--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W1Z508DZ7T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-W1Z508DZ7T');
+</script> 
+	
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -175,7 +184,6 @@
           </p>
           <p>Whether you are passionate about Queer theatre or simply eager to learn more, 
             our community welcomes everyone who values diversity on stage. <a href="about.html" class="no-link-style icon-style">More...</a></p>
-          </p>
         </div>
       </div>
     </div>
@@ -249,7 +257,7 @@
             <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Romeo & Romeo</h4>
+                <h4 class="card-title">Romeo and Romeo</h4>
                 <p>6 May - 6 June 2025</p>
                 <p class="card-text">Two men, bound to duty, 
                   are consumed by a forbidden love that spirals into betrayal, vengeance, 
