--- a/tickets.html
+++ b/tickets.html
@@ -169,7 +169,7 @@
                   <p class="card-text">A Sappho
                     inspired retelling. As her passion for a younger muse intensifies, the line between art and obsession begins to blur. Set in modern times, Eclipse Hearts follows a driven writer whose orderly life unravels in the wake of unreturned love.
                   </p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 45 minutes (no intermission)</small></p>
                 </div>
                 <div class="d-flex justify-content-end">
                   <a href="favourites.html" class="text-decoration-none text-reset icon-style">
@@ -189,17 +189,16 @@
         <div class="card mb-3">
           <div class="row g-0 d-flex">
             <div class="col-md-4">
-              <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+              <img src="images/tickets-images/midnight.jpg" class="card-img-top" alt="eclipse-hearts-photo">
             </div>
             <div class="col-md-8">
               <div class="card-body d-flex flex-column justify-content-between">
                 <div>
-                  <h4 class="card-title">Eclipse Hearts</h4>
-                  <p>3 Apr - 3 May 2025</p>
-                  <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
-                    inspired retelling.
+                  <h4 class="card-title">Midnight in the Violet Garden</h4>
+                  <p>25 May 2025 - 25 May 2026</p>
+                  <p class="card-text">In a surreal dreamscape where time bends and flowers whisper, a lonely astronomer encounters a mysterious child who may hold the key to her forgotten future. A poetic, visually rich play about longing and letting go.
                   </p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 20 minutes (no intermission)</small></p>
                 </div>
                 <div class="d-flex justify-content-end">
                   <a href="favourites.html" class="text-decoration-none text-reset icon-style">
@@ -222,17 +221,16 @@
       <div class="card mb-3">
         <div class="row g-0 d-flex">
           <div class="col-md-4">
-            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+            <img src="images/tickets-images/piano.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
           <div class="col-md-8">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Eclipse Hearts</h4>
-                <p>3 Apr - 3 May 2025</p>
-                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
-                  inspired retelling.
+                <h4 class="card-title">Clockwork Silence</h4>
+                <p>30 June - 30 August 2025</p>
+                <p class="card-text">In a town where music is banned, two teenage boys—quiet pianist Leo and bold newcomer Max—start a secret orchestra in an old clocktower. As rebellion brews, so does a quiet romance that challenges everything they’ve been told.
                 </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-body-secondary">Duration: 2 hours (with intermission)</small></p>
               </div>
               <div class="d-flex justify-content-end">
                 <a href="favourites.html" class="text-decoration-none text-reset icon-style">
@@ -254,17 +252,16 @@
       <div class="card mb-3">
         <div class="row g-0 d-flex">
           <div class="col-md-4">
-            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+            <img src="images/tickets-images/letter.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
           <div class="col-md-8">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Eclipse Hearts</h4>
-                <p>3 Apr - 3 May 2025</p>
-                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
-                  inspired retelling.
+                <h4 class="card-title">Letters from the Smokehouse</h4>
+                <p>20 March - 01 Sep 2025</p>
+                <p class="card-text">During WWII, Mira finds hidden love letters between her grandmother and a woman named Anne. As she unravels her family’s queer past, she begins to question her own feelings for her best friend, Clara.
                 </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 35 minutes (no intermission)</small></p>
               </div>
               <div class="d-flex justify-content-end">
                 <a href="favourites.html" class="text-decoration-none text-reset icon-style">
@@ -286,17 +283,16 @@
       <div class="card mb-3">
         <div class="row g-0 d-flex">
           <div class="col-md-4">
-            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+            <img src="images/tickets-images/last_curtain.jpg" class="card-img-top" alt="eclipse-hearts-photo">
           </div>
           <div class="col-md-8">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Eclipse Hearts</h4>
-                <p>3 Apr - 3 May 2025</p>
-                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho
-                  inspired retelling.
+                <h4 class="card-title">The Last Curtain</h4>
+                <p>15 July - 15 Oct 2025</p>
+                <p class="card-text">A retired actress returns to the stage for one final performance—only to discover that the theater holds secrets from her past. A haunting drama about ambition, memory, and the ghosts we leave behind.
                 </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 50 minutes (with intermission)</small></p>
               </div>
               <div class="d-flex justify-content-end">
                 <a href="favourites.html" class="text-decoration-none text-reset icon-style">
