--- a/corporate.html
+++ b/corporate.html
@@ -567,21 +567,21 @@
       <!-- Slide 1 with hyperlink -->
       <div class="carousel-item active">
         <a href="https://www.instagram.com/p/DHX8w3sotUK/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/second-instagram-post/second-post-first-slide.jpeg" class="d-block w-100" alt="First Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-two/second-post-first-slide.jpeg" class="d-block w-100" alt="First Slide">
         </a>
       </div>
 
       <!-- Slide 2 with hyperlink -->
       <div class="carousel-item">
         <a href="https://www.instagram.com/p/DHX8w3sotUK/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/second-instagram-post/second-post-second-slide.jpeg" class="d-block w-100" alt="Second Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-two/second-post-second-slide.jpeg" class="d-block w-100" alt="Second Slide">
         </a>
       </div>
 
       <!-- Slide 3 with hyperlink -->
       <div class="carousel-item">
         <a href="https://www.instagram.com/p/DHX8w3sotUK/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/second-instagram-post/second-post-third-slide.jpeg" class="d-block w-100" alt="Third Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-two/second-post-third-slide.jpeg" class="d-block w-100" alt="Third Slide">
         </a>
       </div>
     </div>
@@ -608,28 +608,28 @@
       <!-- Slide 1 with hyperlink -->
       <div class="carousel-item active">
         <a href="https://www.instagram.com/p/DHk23AGogYe/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/third-instagram-post/first-slide-post-three.png" class="d-block w-100" alt="First Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-three/first-slide-post-three.png" class="d-block w-100" alt="First Slide">
         </a>
       </div>
 
       <!-- Slide 2 with hyperlink -->
       <div class="carousel-item">
         <a href="https://www.instagram.com/p/DHk23AGogYe/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/third-instagram-post/second-slide-post-three.png" class="d-block w-100" alt="Second Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-three/second-slide-post-three.png" class="d-block w-100" alt="Second Slide">
         </a>
       </div>
 
       <!-- Slide 3 with hyperlink -->
       <div class="carousel-item">
         <a href="https://www.instagram.com/p/DHk23AGogYe/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/third-instagram-post/third-slide-post-three.png" class="d-block w-100" alt="Third Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-three/third-slide-post-three.png" class="d-block w-100" alt="Third Slide">
         </a>
       </div>
     </div>
 		  <!-- Slide 4 with hyperlink -->
       <div class="carousel-item">
         <a href="https://www.instagram.com/p/DHk23AGogYe/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/third-instagram-post/fourth-slide-post-three.png" class="d-block w-100" alt="Third Slide">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-three/fourth-slide-post-three.png" class="d-block w-100" alt="Fourth Slide">
         </a>
       </div>
     </div>
