--- a/corporate.html
+++ b/corporate.html
@@ -228,7 +228,7 @@
 
     <!--start of brand persona-->
     <h3 class="subheadings-content-part-corporate-page">Brand Persona</h3>
-    <img src="images/corporate-page-images/brand-persona-image/brand-persona.jpg" alt="brand persona">
+    <img src="images/corporate-page-images/brand persona-image/brand-persona.jpg" alt="brand persona">
     <!--end of brand persona-->
 
     <!--start of visual identity-->
@@ -553,7 +553,7 @@
 		<!-- Static Carousel with One Linked Image -->
   <div style="max-width: 500px; margin: auto;">
         <a href="https://www.instagram.com/p/DHSwABTIQHa/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-          <img src="images/corporate-page-images/marketing-promotional-activities/first-instagram-post/first-instagram-post.jpeg" class="d-block w-100" alt="First Instagram Post">
+          <img src="images/corporate-page-images/marketing-promotional-activities/instagram-post-one/first-instagram-post.jpeg.jpeg" class="d-block w-100" alt="First Instagram Post">
         </a>
       </div>
     </div>
