corporate page changes

--- a/corporate.html
+++ b/corporate.html
@@ -221,7 +221,7 @@
         <li><strong>Authenticity</strong> - We are committed to authenticity, and proudly celebrating LGBTQ+ voices in
           theatre.</li>
         <li> <strong>Learning</strong> - Engaging with our brand means always discovering something new.</li>
-        <li><strong>Inclusivity</strong>- We welcome all who support and engage with Lgbtq+ theatre.</li>
+        <li><strong>Inclusivity</strong>- We welcome all who support and engage with LGBTQ+ theatre.</li>
       </ul>
     </div>
     <!--end of brand values-->
@@ -311,7 +311,7 @@
       <p><strong>Channels</strong></p>
       <ul>
         <li>Social media: TikTok, Instagram, YouTube</li>
-        <li>Advertising at theaters </li>
+        <li>Advertising at theatres </li>
       </ul>
       <!--end of channels part-->
 
@@ -345,8 +345,8 @@
       <ul>
         <li><strong>Hosting</strong> - The cost of keeping the website live and accessible </li>
         <li><strong>People</strong> – Salaries to employees and contributors </li>
-        <li><strong>Ticket</strong> <strong>management system</strong> – The system is developed/licensed for a fixed
-          fee rather than per transaction</li>
+        <li><strong>Ticket</strong> <strong>management system</strong> – The system is licensed for a fixed
+        fee rather than per transaction</li>
       </ul>
       <!--end of fixed costs part-->
 
@@ -365,8 +365,8 @@
       <!--start of  revenue streams part-->
       <p><strong>Revenue Streams</strong></p>
       <ul>
-        <li><strong>Advertisement based</strong> - on our website advertisment space is sold and from this income is
-          generated </li>
+        <li><strong>Advertisement based</strong> - On the website advertisment space is sold and from this income is
+        generated </li>
         <li><strong>Freemium</strong> <strong>Revenue</strong> <strong>Model</strong> (Subscription option for 2,99
           euro/month) - In order to read certain articles individuals will be asked to pay a certain subscription as
           well to buy certain tickets to plays</li>
